--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "license": "MIT",
   "scripts": {
     "build": "tsup",
+    "test": "npm run build && node --test",
     "reinstall": "npm i",
     "prepare": "npm run build",
+    "prepublishOnly": "npm run test",
     "publish": "npm publish"
   },
   "devDependencies": {
