--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "seconds-util",
   "version": "1.1.0",
-  "description": "A TypeScript Node.js utility which helps with conversion of seconds to other time types. You can also get duration in text form.",
+  "description": "A TypeScript Node.js utility which helps with conversion of time units. You can also get duration in text form.",
   "repository": "https://github.com/JasperLorelai/seconds-util",
   "author": "JasperLorelai",
   "types": "dist/Seconds.d.ts",
